--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,21 @@
     "@prisma/client": "^6.13.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
+    "@tanstack/react-query": "^5.84.2",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
+    "immer": "^10.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-use-websocket": "^4.13.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
