--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "frontend",
+  "name": "gomafia-insights",
   "version": "0.1.0",
+  "description": "Professional analytics platform for competitive Mafia game performance tracking and insights",
   "private": true,
   "scripts": {
     "dev": "next dev",
