--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -30,6 +30,12 @@
       "rules": {
         "@typescript-eslint/no-explicit-any": "warn"
       }
+    },
+    {
+      "files": ["src/hooks/**/*", "src/types/**/*"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
   ]
 }
