--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest --run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:ci": "vitest --run --reporter verbose"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
