--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "test:ci": "vitest --run --reporter verbose"
+    "test:ci": "vitest --run --reporter verbose",
+    "test:e2e": "playwright test --config=playwright.config.ts --reporter=dot"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
@@ -24,7 +25,7 @@
     "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
+    "next": "^15.5.4",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6",
     "@testing-library/react": "^16",
@@ -46,6 +48,6 @@
     "jsdom": "^24",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^2"
+    "vitest": "^3.2.4"
   }
 }
