--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: '20'
       - name: Install dependencies
         run: npm --prefix frontend ci
+      - name: Prisma generate (frontend schema)
+        run: npm --prefix frontend exec prisma generate -- --schema=prisma/schema.prisma
       - name: Lint
         run: npm --prefix frontend run lint
       - name: Unit tests (vitest)
