--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm --prefix frontend ci
       - name: Prisma generate (frontend schema)
-        run: npm --prefix frontend exec prisma generate -- --schema=prisma/schema.prisma
+        run: npm --prefix frontend exec prisma generate -- --schema=frontend/prisma/schema.prisma
       - name: Lint
         run: npm --prefix frontend run lint
       - name: Unit tests (vitest)
