chore(build): run prisma generate in postinstall for Vercel builds

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Professional analytics platform for competitive Mafia game performance tracking and insights",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
