ci: run playwright e2e from frontend and support preview auth for canary healthcheck

--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -54,11 +54,13 @@ jobs:
       - name: Canary healthcheck (preview)
         env:
           PREVIEW_URL: ${{ needs.build-and-test.outputs.preview_url }}
+          PREVIEW_AUTH_USER: ${{ secrets.PREVIEW_AUTH_USER }}
+          PREVIEW_AUTH_PASS: ${{ secrets.PREVIEW_AUTH_PASS }}
         run: |
           echo "Running canary healthcheck against $PREVIEW_URL"
           bash ./scripts/canary-healthcheck.sh "$PREVIEW_URL"
       - name: Run Playwright tests against preview
+        working-directory: frontend
         env:
           PREVIEW_URL: ${{ needs.build-and-test.outputs.preview_url }}
-        run: |
-          npm --prefix frontend run test:e2e
+        run: npm run test:e2e
