--- a/data-collection/requirements.txt
+++ b/data-collection/requirements.txt
@@ -24,6 +24,7 @@ APScheduler>=3.10.4
 # Configuration and environment
 python-dotenv>=1.0.0
 pydantic>=2.5.0
+pydantic-settings>=2.0.0
 
 # Logging and monitoring
 structlog>=23.2.0
